Fixed sidebar and content overlapping

--- a/assets/css/simple-sidebar.css
+++ b/assets/css/simple-sidebar.css
@@ -122,4 +122,10 @@
         position: relative;
         margin-right: 0;
     }
+
+    /* this is for the side-bar not overlap the content */
+    .content {
+        padding-left: 250px
+    }
 }
+
